force-app/main/default/objects/ProductSearch__c/ProductSearch__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This will contain the records to be searched from Product Search screen.</description>
    <label>Product Search Matrix</label>
</CustomObject>