force-app/main/default/objects/ProductSearch__c/fields/Grand_Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Grand_Parent_Product__c</fullName>
    <description>Holds the Grand Parent Product value.</description>
    <label>Grand Parent Product</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>