force-app/main/default/objects/ProductSearch__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <description>Contains the Parent Product associated with GPP and record type.</description>
    <label>Parent Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>