force-app/main/default/objects/ProductSearch__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Product associated to GPP and Parent Product.</description>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>