force-app/main/default/objects/ProductSearch__c/fields/Product_Division__c.field-meta.xml
<CustomField>
    <fullName>Product_Division__c</fullName>
    <description>This field help in identifying the division the product is offered by.</description>
    <label>Product Division</label>
    <length>255</length>
    <type>Text</type>
</CustomField>