force-app/main/default/objects/ProductSearch__c/fields/Product_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Record_Type__c</fullName>
    <description>Contains the record type to be populated along with the record. Record should value populated in this field.</description>
    <label>Product Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>