force-app/main/default/objects/ProductSearch__c/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>NAME</columns>
    <columns>Grand_Parent_Product__c</columns>
    <columns>Parent_Product__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Division__c</columns>
    <columns>Product_Record_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>